mainpanelcontroller warnings removed